--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                 <img src="../jobSideNew/assets/about-1.jpg" alt="">
             </div>
 
-            <div style="width: 268px; margin-top: 22px;">
+            <div class="twoImage">
                 <img src="../jobSideNew/assets/about-2.jpg" alt="">
             </div>
 
